--- a/TA_congestion_transition.ipynb
+++ b/TA_congestion_transition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TA_congestion_transition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM241cqEuLmCOZDAvVhj/JW",
+      "authorship_tag": "ABX9TyN8aeb+OtYelfXrdGMaBvwD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,59 +29,67 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5mB9hLJO8u1J",
-        "outputId": "69a2cf0c-d5d6-42eb-fdde-f019d91ea284"
+        "id": "mbGG52TVXVMp"
       },
       "source": [
-        "install.packages(\"markovchain\")\n",
-        "install.packages(\"diagram\")\n",
+        "<b>Project Overview</b>\n",
+        "\n",
+        "The degree at which regional traffic congestion changes from one state to the other is of key importance to policy planners in forecasting future state of congestion. This analysis was carried out for freeway traffic congestion and the purpose was to understand the likelihood of reaching Light congestion (free-flow) from moderate and heavy congestion levels. \n",
+        "\n",
+        "\n",
+        "<b>Project Goals</b>\n",
+        "\n",
+        "The purpose of this project was to model the rate at which congestion moves from one state to the other so policy makers can design specific policies targeted at specific locations with the aim of reducing congestion to tolerable limits.\n",
+        "\n",
+        "<b>Outcomes</b>\n",
+        "\n",
+        "The data covers 2012 and 2018 monthly congestion categorized as being either Light, Moderate or Heavy. This analysis was undertaken with R’s markovchain package and assumes congestion starts initially in a given category and then takes a move to another category, continuing to do so until reaching Light (free-flow). The model further assumes that at each move (transition), congestion is independent of the past level. \n",
+        "\n",
+        "I found that although evening peak period congestion accounted for 70% of total congestion, the rate of return to free-flow condition was faster in the evening than in the morning peak periods.\n",
+        "\n",
+        "<b>Project Status:</b> Completed (2018)\n",
+        "\n",
+        "<b>Report:</b> Page 36\n",
+        "https://www.ewgateway.org/wp-content/uploads/2020/03/2018-AnnualRegionalCongestion-Rpt.pdf\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y60dXheuVE1T"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5mB9hLJO8u1J"
+      },
+      "source": [
+        "#install.packages(\"markovchain\")\n",
+        "#install.packages(\"diagram\")\n",
         "library(markovchain)\n",
         "library(diagram)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘igraph’, ‘matlab’, ‘expm’, ‘RcppParallel’, ‘RcppArmadillo’\n",
-            "\n",
-            "\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependency ‘shape’\n",
-            "\n",
-            "\n",
-            "Package:  markovchain\n",
-            "Version:  0.8.6\n",
-            "Date:     2021-05-17\n",
-            "BugReport: https://github.com/spedygiorgio/markovchain/issues\n",
-            "\n",
-            "\n",
-            "Loading required package: shape\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 792
+          "height": 791
         },
         "id": "BdQ4FVWL9gZV",
-        "outputId": "81f2d2f1-e3ab-4f2d-9697-c838b88c8865"
+        "outputId": "487ff1e6-363b-4181-ca50-1d75d32e7072"
       },
       "source": [
         "tti1 <- read.csv(\"/content/sample_data/febam.csv\")\n",
@@ -110,7 +118,7 @@
         "        self.shiftx = .13,\n",
         "        main = \"\")"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
